# Terracraft

./: CMakeLists.txt  README.md
src/: main.c  scenes.c  scenes.h  setting.h
src/common/: properties.c  properties.h  systems.c  systems.h  traits.c  traits.h
src/common/properties/: action.c  action.h  background.c  background.h  button.c  button.h  cursor.c  cursor.h  entry.c  entry.h  foreground.c  foreground.h  listener.c  listener.h  text.c  text.h  unicode.c  unicode.h
src/common/systems/: action_box_listener.c  action_box_listener.h  bg_painter.c  bg_painter.h  button_listener.c  button_listener.h  cursor_painter.c  cursor_painter.h  entry_alpha_listener.c  entry_alpha_listener.h  entry_listener.c  entry_listener.h  fg_painter.c  fg_painter.h  listener.c  listener.h  text_painter.c  text_painter.h  unicode_painter.c  unicode_painter.h
src/common/traits/: action_box.c  action_box.h  entry_alpha.c  entry_alpha.h  entry_listening.c  entry_listening.h  entry_with_cursor.c  entry_with_cursor.h
src/game/: properties.c  properties.h  traits.c  traits.h
src/game/properties/: motion.c  motion.h  timer.c  timer.h
src/game/traits/: destroy_block.c  destroy_block.h  fluid.c  fluid.h  garbage_collective.c  garbage_collective.h  liquid.c  liquid.h  tex_block.c  (+3 more)
src/global/: archive.c  archive.h  global.c  global.h  land.c  land.h
src/scenes/: game.c  game.h  login.c  login.h
src/ztream/: admin.c  admin.h  container.c  container.h  ecs.c  ecs.h  event.c  event.h  header.h  render.c  render.h  stream.c  stream.h  timelord.c  timelord.h  wcwidth.c  ztream.h
(+56 files in other folders)
